fixed menu phone link href, added script to hide scrollbar when menu on

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,6 +8,10 @@
 
   &__body {
     margin: 0;
+
+    &--menu-on {
+      overflow: hidden;
+    }
   }
 
   &__menu {
@@ -20,6 +24,7 @@
     transition: transform 0.3s;
 
     &:target {
+      z-index: 1;
       transform: translateX(0);
     }
   }
